--- a/src/templates/update.html
+++ b/src/templates/update.html
@@ -3,8 +3,8 @@
 {% block body %}
 
 
-<div class="jumbotron">
-    <div class="container">
+<div class="jumbotron bg-dark text-white">
+    <div class="container" style="max-width: 500px;">
         <center>
             <h1>Task Master</h1>
         </center>
